--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     </header>
     <main>
         <div id="board" class="board">
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
-            <button class="square"><p></p></button>
+            <button class="square" id="square-0"></button>
+            <button class="square" id="square-1"></button>
+            <button class="square" id="square-2"></button>
+            <button class="square" id="square-3"></button>
+            <button class="square" id="square-4"></button>
+            <button class="square" id="square-5"></button>
+            <button class="square" id="square-6"></button>
+            <button class="square" id="square-7"></button>
+            <button class="square" id="square-8"></button>
         </div>
+
+        <button id="reset-button">RESET</button>
     </main>
     <script src="index.js"></script>
 </body>
