--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     </header>
     <main>
         <div id="board" class="board">
-            <button class="square" id="square-0"></button>
-            <button class="square" id="square-1"></button>
-            <button class="square" id="square-2"></button>
-            <button class="square" id="square-3"></button>
-            <button class="square" id="square-4"></button>
-            <button class="square" id="square-5"></button>
-            <button class="square" id="square-6"></button>
-            <button class="square" id="square-7"></button>
-            <button class="square" id="square-8"></button>
+            <button class="square" id="square-0" data-index="0"></button>
+            <button class="square" id="square-1" data-index="1"></button>
+            <button class="square" id="square-2" data-index="2"></button>
+            <button class="square" id="square-3" data-index="3"></button>
+            <button class="square" id="square-4" data-index="4"></button>
+            <button class="square" id="square-5" data-index="5"></button>
+            <button class="square" id="square-6" data-index="6"></button>
+            <button class="square" id="square-7" data-index="7"></button>
+            <button class="square" id="square-8" data-index="8"></button>
         </div>
-
         <button id="reset-button">RESET</button>
     </main>
     <script src="index.js"></script>
