Main functionality implemented

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
             <button class="square" id="square-7" data-index="7"></button>
             <button class="square" id="square-8" data-index="8"></button>
         </div>
-        <button id="reset-button">RESET</button>
+        <h2 class="text" id="text"></h2>
+        <div class="reset-container">
+            <button class="reset" id="reset-button">RESET</button>
+        </div>
+        
     </main>
     <script src="index.js"></script>
 </body>
