--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
         <div class="reset-container">
             <button class="reset" id="reset-button">RESET</button>
         </div>
-        
     </main>
+    <footer>
+        <p>&copy; Leon
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+        </p>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
